<resources>
    <string name="app_name">BORGI</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="email_asterisk">*Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login">Login</string>
    <string name="name_asterisk">*Name</string>
    <string name="name">Name</string>
    <string name="surname_asterisk">*Surname</string>
    <string name="surname">Surname</string>
    <string name="middle_name">Middle Name</string>
    <string name="optional">(Optional)</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="passport_nr">Passport Nr.</string>
    <string name="issuer">Issuer</string>
    <string name="passport_details">Passport details:</string>
    <string name="street">Street</string>
    <string name="house">House</string>
    <string name="flat_nr">Flat Nr.</string>
    <string name="country">Country:</string>
    <string name="city">City:</string>
    <string name="phone_number">*Phone Number:</string>
    <string name="passport_issue_date">Passport issue date</string>
    <string name="signature">*Signature:</string>
    <string name="pick">Pick</string>
    <string name="i_agree_with_terms_and_conditions">I agree with \'Terms and Conditions\'</string>
    <string name="press_here_to_read_terms_and_conditions">Press here to read \'Terms and Conditions\'</string>
    <string name="transfer_to_account">Transfer to account</string>
    <string name="borrow">Borrow</string>
    <string name="debts_into_money">Debts into money</string>
    <string name="total_available_mcg">Total available (mkg):</string>
    <string name="au">Au</string>
    <string name="available_limit_mcg">Available limit (mkg):</string>
    <string name="debts_mcg_minus">Debts - (mkg):</string>
    <string name="debts_mcg_plus">Debts + (mkg):</string>
    <string name="search_by_account_nr_or_name">Account nr. or name</string>
    <string name="total_amount_mcg_au">Total amount (mkg) Au:</string>
    <string name="balance_due_mcg">Balance Due (mkg):</string>
    <string name="converted_to_money_mcg">Converted to money (mkg):</string>
    <string name="debt_sum">Debt Sum</string>
    <string name="date_when_created">Date when created</string>
    <string name="debt_to_be_fulfilled_by">Debt to be fulfilled by</string>
    <string name="transfer_to_account_borrow">Transfer to account (borrow)</string>
    <string name="account_number">Account Number</string>
    <string name="loan_amount">Loan amount</string>
    <string name="continueJAVAISSTUPID">Continue</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">+447532804532</string>
    <string name="user_profile">Manage Profile</string>
    <string name="app_language">App Language</string>
    <string name="sign_out">Sign out</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="select_app_language">Select App Language</string>
    <string name="language_english">English</string>
    <string name="language_russian">Russian</string>
    <string name="language_ukrainian">Ukrainian</string>
    <string name="english">English</string>
    <string name="russian">Russian</string>
    <string name="ukrainian">Ukrainian</string>
    <string name="cancel">Cancel</string>
    <string name="select_account">Select Account</string>
</resources>