<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:id="@+id/group_navs" android:checkableBehavior="none">
        <item
            android:textColor="@color/white"
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/user_profile"
            app:showAsAction="never"/>
        <item
            android:textColor="@color/white"
            android:id="@+id/nav_language"
            android:icon="@drawable/lang"
            android:title="@string/app_language"
            app:showAsAction="never"/>
        <item
            android:textColor="@color/white"
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/baseline_logout_24"
            android:title="@string/sign_out"
            app:showAsAction="never"/>
    </group>
</menu>