<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/signupLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/text_semi_transparent_white">

        </TextView>

        <TextView
            android:id="@+id/signupTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:textColor="@color/gold">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/borgi_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="60dp"
            android:orientation="vertical">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_fields_height"
                    android:layout_marginTop="60dp"
                    android:drawableStart="@drawable/ic_email"
                    android:drawablePadding="8dp"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_semi_transparent_white"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/login_fields_height"
                    android:layout_marginTop="16dp"
                    android:drawableStart="@drawable/ic_password"
                    android:drawablePadding="8dp"
                    android:hint="@string/password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:selectAllOnFocus="true"
                    android:textColor="@color/white"
                    android:textColorHint="@color/text_semi_transparent_white" />

            </LinearLayout>


            <Button
                style="@style/GoldBtn"
                app:backgroundTint="@null"
                android:id="@+id/loginBtn"
                android:layout_width="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:text="@string/log_in" />

            <TextView
                android:id="@+id/forgotPasswordTV"
                android:textColor="@color/text_semi_transparent_white"
                android:layout_marginTop="32dp"
                android:text="@string/forgot_password"
                android:layout_gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            </TextView>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>