<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/drawerBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/drawerbtn" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Some random nr (q)"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold" />

            <ImageButton
                android:id="@+id/arrowsBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/transparent"
                android:src="@drawable/arrows" />

        </RelativeLayout>
    </Toolbar>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/underline_on_black" />

    <LinearLayout
        android:orientation="vertical"
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="26dp">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/mcg"
                android:text="@string/total_available_mcg"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:src="@drawable/infinity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/gold"
                    android:text="@string/au"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/underline_on_black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="26dp">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/mcg"
                android:text="@string/available_limit_mcg"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <ImageView
                    android:src="@drawable/infinity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/gold"
                    android:text="@string/au"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/underline_on_black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="26dp">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/mcg"
                android:text="@string/debts_mcg_minus"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/red"
                    android:text="-12 780"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/red"
                    android:text="@string/au"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </RelativeLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/underline_on_black" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="26dp">

            <TextView
                android:textSize="14sp"
                android:textColor="@color/mcg"
                android:text="@string/debts_mcg_plus"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:gravity="center"
                android:orientation="horizontal"
                android:layout_alignParentEnd="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">


                <TextView
                    android:textStyle="bold"
                    android:textSize="20sp"
                    android:textColor="@color/green"
                    android:text="+20 720"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    />
                <TextView
                    android:layout_marginStart="4dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/green"
                    android:text="@string/au"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/twoone">

        <LinearLayout
            android:padding="10dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/goldBtn"
                android:text="@string/debts_into_money"
                app:backgroundTint="@null"
                android:layout_weight="1"
                style="@style/GoldBtn"
                android:layout_width="match_parent" />

            <LinearLayout
                android:id="@+id/redBtn"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_marginStart="6dp"
                app:backgroundTint="@null"
                android:layout_weight="1"
                style="@style/RedBtn"
                android:layout_width="match_parent">

                <TextView
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    android:text="@string/transfer_to_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:textSize="12sp"
                    android:textColor="@color/white"
                    android:text="@string/borrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </LinearLayout>



    </LinearLayout>


</LinearLayout>