<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransferToAccountActivity">

    <include android:id="@+id/toolbar" layout="@layout/toolbar"/>

    <LinearLayout
        android:layout_marginTop="80dp"
        android:layout_marginHorizontal="30dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_card" />

            <TextView
                android:id="@+id/accountNrTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/account_number"
                android:textColor="@color/black_50"
                android:textSize="15sp" />

        </LinearLayout>
        <EditText
            android:id="@+id/accountNrET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underline_on_white"
            android:drawableStart="@drawable/ic_email_null"
            android:drawablePadding="24dp"
            android:hint="4000 0000 0000 0125"
            android:text="4000 0000 0000 0125"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/two_four"
            android:textColorHint="@color/black_50"
            android:textSize="20sp" />

<!--        -->
        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_gold" />

            <TextView
                android:id="@+id/loanAmountTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/loan_amount"
                android:textColor="@color/black_50"
                android:textSize="15sp" />

        </LinearLayout>
        <EditText
            android:id="@+id/loanAmountET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underline_on_white"
            android:drawableStart="@drawable/ic_email_null"
            android:drawablePadding="24dp"
            android:hint="12 560"
            android:text="12 560"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/two_four"
            android:textColorHint="@color/black_50"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/debtToBeByTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/debt_to_be_fulfilled_by"
                android:textColor="@color/black_50"
                android:textSize="15sp" />

        </LinearLayout>
        <EditText
            android:id="@+id/debtToBeByET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/underline_on_white"
            android:drawableStart="@drawable/ic_email_null"
            android:drawablePadding="24dp"
            android:hint="12.03.2026"
            android:text="12.03.2026"
            android:inputType="number"
            android:maxLines="1"
            android:textColor="@color/two_four"
            android:textColorHint="@color/black_50"
            android:textSize="20sp" />

        <LinearLayout
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_person" />

                    <TextView
                        android:id="@+id/nameTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="15dp"
                        android:text="@string/name"
                        android:textColor="@color/black_50" />
                </LinearLayout>

                <EditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/underline_on_white"
                    android:drawableStart="@drawable/ic_email_null"
                    android:drawablePadding="20dp"
                    android:hint="John"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50"
                    android:textSize="20sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/surnameTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="2dp"
                    android:text="@string/surname"
                    android:textColor="@color/black_50" />

                <EditText
                    android:id="@+id/surnameET"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/underline_on_white"
                    android:hint="Doe"
                    android:maxLines="1"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black_50"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/continueBtn"
            android:text="@string/continueJAVAISSTUPID"
            style="@style/GoldBtnSquare"
            android:layout_marginTop="40dp"
            android:layout_width="match_parent"/>

    </LinearLayout>

</LinearLayout>